# pilotJSP

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.yaml  requirements.txt  setup.py
code/: Makefile  label_problem_data.py
code/scripts/: label_problem_data.py
code/utils/: convert.py  enrich.py
config/: experiment.yaml
data/: README.md  j.rnd.10x10.test.txt  j.rnd.10x10.train.txt  j.rnd.4x5.train.txt  j.rndn.10x10.test.txt  j.rndn.10x10.train.txt
data/Raw/: j.rnd.10x10.test.txt  j.rnd.4x5.train.txt  j.rndn.10x10.train.txt
examples/: inspect_dataset.cpp
include/alice/jsp/config/: experiment_config.hpp  yaml_loader.hpp
include/alice/jsp/data/: dataset.hpp
include/alice/jsp/io/: dataset_reader.hpp
include/alice/jsp/model/: problem_instance.hpp
pilotjsp/: __init__.py  dagger.py  expert.py  features.py  jsp_instance.py  model.py  pilot.py  preferences.py  utils.py
scripts/: evaluate.py  run_example.py  setup.py
src/: dataset.cpp  dataset_reader.cpp  problem_instance.cpp  yaml_loader.cpp
